[gd_scene load_steps=6 format=3 uid="uid://bxoccq6qins32"]

[ext_resource type="Script" path="res://AudioManager.gd" id="1_lu0si"]

[sub_resource type="Animation" id="Animation_ecap4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BGMPlayer:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_iw6ri"]
resource_name = "bgm_fadeIn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BGMPlayer:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-80.0, 0.0]
}

[sub_resource type="Animation" id="Animation_qyhda"]
resource_name = "bgm_fadeOut"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BGMPlayer:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1.46409),
"update": 0,
"values": [0.0, -80.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w5ep7"]
_data = {
"RESET": SubResource("Animation_ecap4"),
"bgm_fadeIn": SubResource("Animation_iw6ri"),
"bgm_fadeOut": SubResource("Animation_qyhda")
}

[node name="AudioManager" type="Node"]
script = ExtResource("1_lu0si")

[node name="BGMPlayer" type="AudioStreamPlayer" parent="."]
process_mode = 3
bus = &"music"

[node name="SFXPlayer_Button" type="AudioStreamPlayer" parent="."]
bus = &"sfx"

[node name="SFXPlayer_Movement" type="AudioStreamPlayer" parent="."]
volume_db = -30.0
bus = &"fixed"

[node name="SFXPlayer_Interaction" type="AudioStreamPlayer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_w5ep7")
}

[connection signal="finished" from="SFXPlayer_Movement" to="." method="_on_sfx_player_movement_finished"]
